--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,30 @@ h2{
 .pricing-col{
   padding:3% 2%;
 }
+/* call To Action Section */
+.callToAction{
+  background-color: #ff4c68;
+  color: white;
+}
+.cta-title{
+  font-size: 3rem;
+  margin-bottom: 5%;
+}
+
+/* Footer */
+.footer{
+  background-color: white;
+  padding: 3% 15%;
+  text-align: center;
+}
+.footer i{
+  font-size: 1.2rem;
+  margin: 2%;
+}
+.footer p{
+  color: #8f8f8f;
+}
+
 
 @media (max-width: 1028px) {
 
